# newspipe

./: .gitignore  README.md  Session.vim  _quarto.yml  build.sbt  index.qmd  newspipe.vim  nohup.out  pybook  pyproject.toml
.gemini/: GEMINI.md
input_files/: seed_urls.json
newspipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
newspipe_java_concept/: pom.xml
newspipe_java_concept/doc/: sp_500_client_app.md
newspipe_java_concept/doc/architecture/: initial_structure.md
newspipe_java_concept/src/main/resources/: application.properties
notebooks/: trinoExploration.ipynb
notebooks/python/: bbc_etl.py  silver_layer.html  silver_layer.ipynb  silver_layer.md  silver_layer.py  silver_layer.qmd
notebooks/scala/: trinoExploration.ipynb
src/: Session.vim
src/application/services/: data_ingestion.py  discovery_consumer.py  discovery_service.py  ingestion_service.py
src/control/: dependency_layers.py  discovery_controller.py  ingestion_controller.py  main.py
src/domain/: interfaces.py  models.py
src/domain/services/: data_ingestion.py  discovery_consumer.py  linguistic_model.py  scraper.py
src/entrypoints/: dependency_layers.py  main.py
src/infrastructure/: kafka.py  lakehouse.py  litellm_client.py  monads.py  ollama_client.py  scraper.py
src/main/scala/: file.scala  scala_ref  spark_example.scala
src/main/scala/com/hotovo/business/: models.scala
src/main/scala/com/hotovo/clients/: clients.scala
src/main/scala/com/hotovo/domain/: models.scala
src/main/scala/com/hotovo/etl/: pipeline.scala
src/main/scala/com/hotovo/infrastructure/: ollama.scala
src/main/scala/com/hotovo/orchestration/: pipeline.scala
src/main/scala/notebookCode/: functors.scala  trinoExploration.scala
src/newspipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
stubs/: feedparser.pyi
stubs/aiokafka/producer/: producer.pyi
stubs/crawl4ai/: __init__.pyi  async_configs.pyi  async_webcrawler.pyi  cli.pyi  models.pyi  utils.pyi
stubs/crawl4ai/deep_crawling/: filters.pyi
(+8 files in other folders)
