[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newspipe"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyspark>=3.5.0,<4.0.0",
    "sparkdantic",
    "returns",
    "pydantic",
    "dependency-injector",
    "httpx",
    "structlog",
    "aiokafka",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
newspipe-ingest = "src.entrypoints.main:main"
