[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newspipe"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyspark>=3.5.0,<4.0.0",
    "sparkdantic",
    "returns",
    "pydantic",
    "dependency-injector",
    "httpx",
    "structlog",
    "aiokafka",
    "dotenv",
    "crawl4ai",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
newspipe-ingest = "src.entrypoints.main:main"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["stubs"]
exclude = ["stubs/"]
